--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -56,6 +56,14 @@ ul {
   position: relative;
   padding: 100px 0;
 
+  @include lg-min {}
+
+  @include lg-md {}
+
+  @include md-sm {}
+
+  @include sm {}
+
   &-overlay {
     background-color: $color-primary;
     opacity: 0.8;
@@ -135,33 +143,84 @@ ul {
 
     &-title {
       font-family: $font-header;
-      font-size: 3.75em;
+      color: $color-light;
       font-weight: 300;
       line-height: 1.2em;
       letter-spacing: 0.08em;
-      color: $color-light;
 
-      @media (max-width: 992) {
-        font-size: 2.5;
+      @include lg-min {
+        font-size: 3.75em;
+      }
+
+      @include lg-md {
+        font-size: 2.5em;
+      }
+
+      @include md-sm {
+        font-size: 1.875em;
+      }
+
+      @include sm {
+        font-size: 1.875em;
       }
     }
 
     &-buttons {
       z-index: 1;
+      display: flex;
+      justify-content: center;
+
+        @include sm{
+          flex-direction: column;
+          align-items: center;
+        }
     }
 
     &-btn {
-      display: inline-block;
-      padding: 17px 72px 19px 70px;
-      margin: 10px;
-      height: 60px;
-      border: solid 2px $color-light;
-      background-color: rgba(255, 255, 255, 0.1);
+      // display: inline-block;
       text-align: center;
-      font-size: 18px;
-      line-height: 1.33;
-      letter-spacing: 1.89px;
+      background-color: rgba(255, 255, 255, 0.1);
       transition: background-color .5s;
+      line-height: 1.33;
+      border: solid 2px $color-light;
+
+      @include lg-min {
+        padding: 17px 72px 19px 70px;
+        margin-right: 20px;
+        min-width: 250px;
+        height: 60px;
+        font-size: 18px;
+        letter-spacing: 1.89px;
+      }
+
+      @include lg-md {
+        padding: 13px 52px 16px 52px;
+        margin-right: 20px;
+        min-width: 200px;
+        height: 50px;
+        font-size: 16px;
+        letter-spacing: 1.6px;
+      }
+
+      @include md-sm {
+        padding: 8px 37px 10px 37px;
+        margin-right: 20px;
+        min-width: 170px;
+        height: 40px;
+        font-size: 16px;
+        letter-spacing: 1.6px;
+      }
+
+      @include sm {
+        padding: 8px 37px 10px 37px;
+        margin-bottom: 20px;
+        min-width: 170px;
+        height: 40px;
+        font-size: 16px;
+        letter-spacing: 1.6px;
+      }
+
+
 
       &:hover {
         background-color: $color-accent;
@@ -178,12 +237,54 @@ ul {
 
   &-container {
     display: grid;
-    grid-template-areas:
-      "a1 a1 a2 a3"
-      "a4 a5 a5 a6"
-      "a7 a8 a9 a6";
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
+    padding-bottom: 20px;
+
+    @include lg-min {
+      grid-template-areas:
+        "a1 a1 a2 a3"
+        "a4 a5 a5 a6"
+        "a7 a8 a9 a6";
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: $gap / 2;
+    }
+
+
+    @include lg-md {
+      grid-template-areas: "a1 a1 a2"
+        "a3 a4 a4"
+        "a5 a5 a6"
+        "a7 a8 a6"
+        "a7 a9 a9";
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: $gap / 2;
+    }
+
+    @include md-sm {
+      grid-template-areas:
+        "a1 a2"
+        "a3 a2"
+        "a4 a4"
+        "a5 a6"
+        "a5 a7"
+        "a8 a9";
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: $gap / 2;
+    }
+
+    @include sm {
+      grid-template-areas:
+        "a1"
+        "a2"
+        "a3"
+        "a4"
+        "a5"
+        "a6"
+        "a7"
+        "a8"
+        "a9";
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: $gap / 2;
+    }
   }
 
   &-block {
@@ -576,6 +677,7 @@ ul {
     max-width: 1340px;
     margin: 0 auto;
     text-align: center;
+    padding: 0 20px;
   }
 
   &-icon {
@@ -590,8 +692,8 @@ ul {
     &:after {
       content: "";
       position: absolute;
-      width: 115px;
-      left: 45%;
+      width: 75px;
+      left: calc(50% - 75px / 2);
       bottom: -7px;
       height: 2px;
       background-color: rgba(99, 117, 136, 0.5);
@@ -624,6 +726,6 @@ ul {
   }
 }
 
-.fa-2x{
+.fa-2x {
   font-size: 2.3em;
 }
