--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -170,10 +170,10 @@ ul {
       display: flex;
       justify-content: center;
 
-        @include sm{
-          flex-direction: column;
-          align-items: center;
-        }
+      @include sm {
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     &-btn {
@@ -413,6 +413,10 @@ ul {
         background-color: $color-accent;
         border: 2px solid rgba(45, 54, 81, 0.8);
       }
+
+      @include sm {
+        width: 100%;
+      }
     }
   }
 }
@@ -425,22 +429,64 @@ ul {
     padding: 97px 20px 86px 20px;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 271px;
-    gap: 100px;
+
+
+    @include lg-min {
+      grid-template-columns: 1fr 271px;
+      gap: 100px;
+    }
+
+    @include lg-md {
+      grid-template-columns: 1fr 271px;
+      gap: 40px;
+    }
+
+    @include md-sm {
+      grid-template-columns: 1fr 236px;
+      gap: 20px;
+    }
+
+    @include sm {
+      grid-template-columns: 1fr;
+    }
   }
 
   &-content {
     color: $color-gray;
-    font-size: 1.125rem;
     letter-spacing: 0.055em;
 
+    @include lg-min {
+      font-size: 1.125rem;
+    }
+
     &-title {
-      margin: 0 0 48px 0;
+
       letter-spacing: 0.1em;
       color: $color-primary;
       font-family: $font-header;
       line-height: 1.2em;
-      font-size: 2.5rem;
+
+
+      @include lg-min {
+        font-size: 2.5rem;
+        margin: 0 0 56px 0;
+      }
+
+      @include lg-md {
+        font-size: 2rem;
+        margin: 0 0 42px 0;
+      }
+
+      @include md-sm {
+        font-size: 1.5rem;
+        margin: 0 0 36px 0;
+      }
+
+      @include sm {
+        font-size: 1.5rem;
+        margin: 0 0 36px 0;
+        text-align: center;
+      }
     }
   }
 
@@ -452,10 +498,31 @@ ul {
     content: "";
     position: absolute;
     top: 0;
-    right: -50px;
     width: 2px;
     height: 200px;
     background-color: rgba(99, 117, 136, 0.1);
+
+    @include lg-min {
+      right: -50px;
+    }
+
+    @include lg-md {
+      right: -20px;
+    }
+
+    @include md-sm {
+      right: -10px;
+    }
+
+    @include sm {
+      display: none;
+    }
+  }
+
+  &-image {
+    display: grid;
+    justify-content: center;
+    align-items: center;
   }
 
   &-image img {
@@ -474,12 +541,39 @@ ul {
     margin: auto;
     padding: 0 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    gap: 20px;
+
+    @include lg-min {
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-content: center;
+      gap: $gap;
+    }
+
+    @include lg-md {
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-content: center;
+      gap: $gap;
+    }
+
+    @include md-sm {
+      grid-template-columns: 1fr 1fr;
+      justify-content: center;
+      gap: $gap;
+    }
+
+    @include sm {
+      grid-template-rows: 1fr 1fr 1fr;
+      gap: $gap;
+    }
+
   }
 
   &-item {
+    @include md-sm {
+      &:nth-of-type(1) {
+        grid-column: 1 / span 2;
+      }
+    }
+
     &-btn {
       padding: 15px;
       width: 100%;
@@ -524,28 +618,97 @@ ul {
 }
 
 .post {
+  @include lg-min {
+    padding: 100px 0px 100px 0px;
+  }
+
+  @include lg-md {
+    padding: 80px 0px 80px 0px;
+  }
+
+  @include md-sm {
+    padding: 60px 0px 60px 0px;
+  }
+
+  @include sm {
+    padding: 60px 0px 60px 0px;
+  }
+
   &-container {
     max-width: 1340px;
     margin: auto;
-    padding: 100px 20px 0 20px;
+    padding: 0px 20px 0 20px;
+
+
 
     & h2 {
-      font-size: 2.5rem;
       letter-spacing: 0.1em;
       color: $color-primary;
       font-family: $font-header;
       line-height: 1.2em;
-      margin-bottom: 54px;
+
+      @include lg-min {
+        font-size: 2.5rem;
+        margin: 0px 0px 54px 0px;
+      }
+
+      @include lg-md {
+        font-size: 2rem;
+        margin: 0px 0px 58px 0px;
+      }
+
+      @include md-sm {
+        font-size: 1.5rem;
+        margin: 0px 0px 36px 0px;
+      }
+
+      @include sm {
+        font-size: 1.5rem;
+        margin: 0px 0px 36px 0px;
+        text-align: center;
+      }
     }
   }
 
   &-block-wrapper {
     display: grid;
-    grid-template-areas: "b1 b1 b2 b3"
-      "b4 b5 b6 b6";
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr;
-    gap: 20px;
+
+    gap: $gap;
+    padding-bottom: $gap;
+
+    @include lg-min {
+      grid-template-areas: "b1 b1 b2 b3"
+        "b4 b5 b6 b6";
+      grid-template-columns: repeat(4, 1fr);
+
+    }
+
+    @include lg-md {
+      grid-template-areas: "b1 b1 b2"
+        "b3 b4 b4"
+        "b5 b5 b6";
+      grid-template-columns: repeat(3, 1fr);
+
+    }
+
+    @include md-sm {
+      grid-template-areas: "b1 b2"
+        "b3 b4"
+        "b5 b6";
+      grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    @include sm {
+      grid-template-areas: "b1"
+        "b2"
+        "b3"
+        "b4"
+        "b5"
+        "b6";
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: 1fr;
+    }
   }
 
   &-block {
@@ -621,9 +784,7 @@ ul {
 
       & h3 {
         font-family: $font-header;
-        padding: 10px;
         font-size: 18px;
-        font-weight: bold;
         line-height: 1.11;
         letter-spacing: 0.05em;
         text-align: center;
@@ -643,7 +804,8 @@ ul {
   &-button {
     display: flex;
     justify-content: center;
-    margin: 20px 0px 120px 0px;
+
+
 
     &-link {
       display: block;
@@ -663,6 +825,10 @@ ul {
       &:hover {
         background-color: $color-accent;
         border: 2px solid rgba(45, 54, 81, 0.8);
+      }
+
+      @include sm {
+        width: 100%;
       }
     }
   }
