--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -227,6 +227,7 @@ ul
             {
                 font-size: 18px;
                 line-height: 1.11;
+                padding: 0;
 
                 letter-spacing: 1.53px;
 
@@ -241,36 +242,29 @@ ul
                 }
                 @include md
                 {
-                    font-size: 16px;
-                    line-height: 3;
-
                     position: absolute;
                     top: 100%;
 
                     display: none;
 
-                    padding: 10px;
-
                     text-align: right;
-                    letter-spacing: 1.53px;
 
                     background-color: rgba(68, 89, 110, .9);
                 }
             }
         }
 
-        &-item:hover
-        {
-            color: $color-accent;
-        }
-
         &-item
         {
             display: inline-block;
 
-            margin-left: 42px;
+            padding: $gap;
 
             transition: color .5s;
+
+            &:hover {
+              color: $color-accent;
+            }
         }
     }
 
