--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ ul {
   max-width: 1340px;
   height: 100%;
   margin: 0 auto;
-  padding: 0 20px 0 20px;
+  padding: 3px 20px 0 20px;
 }
 
 .header-menu {
@@ -528,7 +528,6 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px;
 }
 
 .header-menu-container {
@@ -551,7 +550,7 @@ ul {
   width: 80px;
   height: 60px;
   margin-right: 3px;
-  padding: 13px 8px 15px 6px;
+  padding: 14px 1px 13px 5px;
   text-align: center;
   border: solid 3px #d53d27;
 }
@@ -631,7 +630,7 @@ ul {
 .header-menu-link-list {
   font-size: 18px;
   line-height: 1.11;
-  padding: 0;
+  margin-right: -20px;
   letter-spacing: 1.53px;
 }
 
@@ -657,6 +656,7 @@ ul {
   font-family: "Roboto Slab", serif;
   font-weight: 300;
   line-height: 1.2em;
+  margin: -11px 0 50px 0px;
   letter-spacing: .08em;
   color: #fff;
 }
@@ -816,7 +816,7 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 20px 0 40px 0;
+  margin: 0 0 40px 0;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -910,25 +910,43 @@ ul {
 
 .form-item-btn {
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 1.125em;
   line-height: 1.33;
+  display: block;
   width: 100%;
   height: 60px;
-  padding: 15px;
+  padding: 0 30px 0 30px;
   -webkit-transition: background-color .5s, border-color .5s;
   -o-transition: background-color .5s, border-color .5s;
   transition: background-color .5s, border-color .5s;
   letter-spacing: 1.8px;
-  border: 1px solid transparent;
-  border-style: none;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.05);
+  color: #fff;
+}
+
+.form-item-btn::-webkit-input-placeholder {
+  color: #637588;
+  -webkit-transition: color .5s;
+  transition: color .5s;
 }
 
 .form-item-btn:hover {
-  border-color: rgba(255, 255, 255, 0.2);
-  border-bottom: 2px solid white;
-  background-color: rgba(255, 255, 255, 0.2);
+  border-color: rgba(255, 255, 255, 0.15);
+  border-bottom-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.form-item-btn:hover::-webkit-input-placeholder {
+  color: #7893b3;
+}
+
+.form-item-btn:focus {
+  outline: none;
+  border-color: rgba(255, 255, 255, 0.15);
+  border-bottom-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.15);
 }
 
 .form-item-btn-accent {
@@ -943,7 +961,6 @@ ul {
   letter-spacing: 1.8px;
   color: #fff;
   border: 1px solid transparent;
-  border-style: none;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
   background-color: rgba(255, 255, 255, 0.1);
 }
