--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ ul {
   max-width: 1340px;
   height: 100%;
   margin: 0 auto;
-  padding: 3px 20px 0 20px;
+  padding: 0px 20px 0 20px;
 }
 
 .header-menu {
@@ -647,7 +647,7 @@ ul {
 }
 
 .header-content {
-  z-index: 1;
+  z-index: 0;
   width: 100%;
   text-align: center;
 }
@@ -668,6 +668,7 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0px 0 0 20px;
 }
 
 .header-content-btn {
@@ -1215,7 +1216,7 @@ ul {
     min-width: 250px;
     height: 60px;
     margin-right: 20px;
-    padding: 17px 72px 19px 70px;
+    padding: 17px 60px 19px 59px;
     letter-spacing: 1.89px;
   }
   .skills-container {
