--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -80,7 +80,7 @@ ul {
         max-width: 1340px;
         height: 100%;
         margin: 0 auto;
-        padding: 3px 20px 0 20px;
+        padding: 0px 20px 0 20px;
     }
 
     &-menu {
@@ -248,7 +248,7 @@ ul {
 
 
     &-content {
-        z-index: 1;
+        z-index: 0;
 
         width: 100%;
 
@@ -292,6 +292,7 @@ ul {
             display: flex;
 
             justify-content: center;
+            padding: 0px 0 0 20px;
 
             @include sm {
                 flex-direction: column;
@@ -315,7 +316,7 @@ ul {
                 min-width: 250px;
                 height: 60px;
                 margin-right: 20px;
-                padding: 17px 72px 19px 70px;
+                padding: 17px 60px 19px 59px;
 
                 letter-spacing: 1.89px;
             }
