--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -88,12 +88,12 @@ ul {
         z-index: 1;
         top: 0;
         left: 0;
-
+        padding: 3px 0 0 0;
         width: 100%;
 
 
         @include md {
-            padding: 12px 0;
+            padding: 16px 0;
             background-color: rgba(68, 89, 110, .25);
         }
 
@@ -117,7 +117,7 @@ ul {
                 width: 80px;
                 height: 60px;
                 margin-right: 3px;
-                padding: 14px 1px 13px 5px;
+                padding: 13px 1px 12px 5px;
 
                 text-align: center;
 
@@ -134,6 +134,8 @@ ul {
 
             align-items: center;
             justify-items: end;
+
+            margin: 0 1px 0 0;
 
             &-btn {
                 position: relative;
